--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "angular-ui-router-anim-in-out/scss/anim-in-out.scss";
 // endbower
 @import "compass/utilities";
 @import "compass/css3/border-radius";
